--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yiyangest/react-native-baidumap.git%22.git"
+    "url": "git+https://github.com/twairball/react-native-baidumap.git"
   },
   "keywords": [
     "baidumap",
     "react-native"
   ],
-  "author": "yiyangest",
+  "author": "twairball",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/yiyangest/react-native-baidumap.git%22/issues"
+    "url": "https://github.com/twairball/react-native-baidumap.git/issues"
   },
-  "homepage": "https://github.com/yiyangest/react-native-baidumap.git%22#readme"
+  "homepage": "https://github.com/twairball/react-native-baidumap.git#readme"
 }
